tests/ui/on_struct.stderr
error: expected `enum`
 --> tests/ui/on_struct.rs:5:1
  |
5 | struct Foo;
  | ^^^^^^
